<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/onboard_login_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:drawableLeft="@drawable/ic_email_register"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/register_input_email"
        android:inputType="textEmailAddress"
        android:maxWidth="480dp"
        android:minWidth="330dp"
        app:layout_constraintBottom_toTopOf="@+id/login_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/ic_pass_register"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/register_input_password"
        android:inputType="textPassword"
        android:maxWidth="480dp"
        android:minWidth="330dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter"
        android:maxWidth="430dp"
        android:maxEms="1"
        android:minWidth="300dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/use_terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>